# knn_lbp_opencv

./: .gitignore  CMakeLists.txt  README.md  dica.txt  main.cpp  plot_points.py
lib_knn_lbp/include/: knn.hpp  knn_lbp.hpp  lbp.hpp
lib_knn_lbp/src/: knn.cpp  knn_lbp.cpp  lbp.cpp
